# QuickLink

./: .dockerignore  .gitignore  any.py  config.py  database.db  database.py  docker-compose.yaml  generate.py  main.py  pyproject.toml  test_database.py  validation.py
clients/: sqlite3_client.py
fastapi/: Dockerfile  generate.py  pyproject.toml  server.py  validation.py
static/css/: styles.css
static/js/: script.js
streamlit/: Dockerfile  pyproject.toml  ui.py
templates/: index.html
tests/: conftest.py  test_database.py  test_sqlite3_client.py
tests/tests_db/: test_sqlite3_client.py
