[tool.poetry]
name = "streamlittest"
version = "0.1.0"
description = ""
authors = ["M4dPac <pac8891@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
