[tool.poetry]
name = "quicklink"
version = "0.1.0"
description = ""
authors = ["M4dPac <pac8891@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
